@@ -123,7 +123,7 @@
     <dependency>
       <groupId>org.hobbit</groupId>
       <artifactId>platform-controller</artifactId>
-      <version>2.0.5</version>
+      <version>2.0.15</version>
     </dependency>
     <!-- ~~~~~~~~~~~~~~~~~~~ End Testing ~~~~~~~~~~~~~~~~~~~~~~ -->
   </dependencies>
@@ -183,6 +183,7 @@
           <systemPropertyVariables>
             <sdkJarFilePath>${project.build.directory}/${project.artifactId}-shaded.jar</sdkJarFilePath>
           </systemPropertyVariables>
+          <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
